[gd_scene load_steps=5 format=2]

[ext_resource path="res://minigames/chest_open/textures/treasure/treasure_2.png" type="Texture" id=1]
[ext_resource path="res://minigames/chest_open/chest_open.gd" type="Script" id=2]
[ext_resource path="res://minigames/chest_open/chest.gd" type="Script" id=3]
[ext_resource path="res://common/sounds/objects/chest/lock_click.wav" type="AudioStream" id=4]

[node name="chest_open" type="Control"]
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chest" type="Node2D" parent="."]
position = Vector2( 512, 300 )
script = ExtResource( 3 )

[node name="lid_closed" type="Node2D" parent="chest"]

[node name="Polygon2D" type="Polygon2D" parent="chest/lid_closed"]
position = Vector2( 0, -75 )
color = Color( 0.247059, 0.121569, 0, 1 )
polygon = PoolVector2Array( -250, -30, 250, -30, 250, 50, -250, 50 )

[node name="Line2D2" type="Line2D" parent="chest/lid_closed"]
position = Vector2( 0, -105 )
points = PoolVector2Array( -250, 0, 250, 0, 250, 80, -250, 80, -250, 0 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )
joint_mode = 2
begin_cap_mode = 2

[node name="lid_open" type="Node2D" parent="chest"]
visible = false

[node name="Polygon2D" type="Polygon2D" parent="chest/lid_open"]
position = Vector2( 0, -160 )
color = Color( 0.247059, 0.121569, 0, 1 )
polygon = PoolVector2Array( -250, -30, 250, -30, 250, 5, -250, 5 )

[node name="Polygon2D2" type="Polygon2D" parent="chest/lid_open"]
position = Vector2( 0, -75 )
color = Color( 0.631373, 0.603922, 0.576471, 1 )
polygon = PoolVector2Array( -250, -80, 250, -80, 250, 50, -250, 50 )

[node name="Line2D2" type="Line2D" parent="chest/lid_open"]
position = Vector2( 0, -105 )
points = PoolVector2Array( -250, -85, 250, -85, 250, 80, -250, 80, -250, -85 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )
joint_mode = 2
begin_cap_mode = 2

[node name="Line2D" type="Line2D" parent="chest/lid_open"]
position = Vector2( 0, -70 )
points = PoolVector2Array( -250, -85, 250, -85 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )

[node name="treasure_2" type="Sprite" parent="chest/lid_open"]
position = Vector2( -0.0322266, -32.7868 )
scale = Vector2( 0.37, 0.37 )
texture = ExtResource( 1 )

[node name="bottom" type="Node2D" parent="chest"]
position = Vector2( 0, 75 )

[node name="Polygon2D" type="Polygon2D" parent="chest/bottom"]
modulate = Color( 0.247059, 0.121569, 0, 1 )
polygon = PoolVector2Array( -250, -100, 250, -100, 250, 125, -250, 125 )

[node name="Line2D" type="Line2D" parent="chest/bottom"]
position = Vector2( 0, -100 )
points = PoolVector2Array( -250, 0, 250, 0, 250, 225, -250, 225, -250, 0 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )
joint_mode = 2
begin_cap_mode = 2

[node name="pirate_name" type="Label" parent="chest/bottom"]
margin_left = -39.5
margin_top = -82.0
margin_right = 39.5
margin_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2
text = "Pirate Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gui_click_detector" type="Control" parent="chest"]
margin_left = -250.0
margin_top = -105.0
margin_right = 250.0
margin_bottom = 200.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="click_player" type="AudioStreamPlayer" parent="chest"]
stream = ExtResource( 4 )

[connection signal="chest_closed" from="chest" to="." method="_on_chest_chest_closed"]
[connection signal="chest_opened" from="chest" to="." method="_on_chest_chest_opened"]
[connection signal="gui_input" from="chest/gui_click_detector" to="chest" method="_on_gui_click_detector_gui_input"]
